--- a/notebooks/kiva/query_analysis.ipynb
+++ b/notebooks/kiva/query_analysis.ipynb
@@ -49,7 +49,7 @@
     "pd.set_option('display.max_rows', 500)\n",
     "pd.set_option('display.max_columns', 500)\n",
     "\n",
-    "import math\n",
+    "import numpy as np\n",
     "\n",
     "import plotly.express as px\n",
     "import plotly.graph_objects as go\n",
@@ -71,11 +71,13 @@
     "import os\n",
     "cache_dir = os.path.expanduser('~/data/kiva')\n",
     "# Initialize query library\n",
-    "from optiml.backend.query_profile import QueryProfile, get_query_hash, get_unique_query\n",
+    "from optiml.backend.query_profile import QueryProfile\n",
+    "from optiml.backend.cost_profile import CostProfile, get_previous_dates\n",
     "qqlib = QueryProfile(connection, 'KIV', cache_dir)\n",
+    "cqlib = CostProfile(connection, 'KIV', cache_dir)\n",
     "# Initialize analysis dates\n",
-    "sdate = '2022-09-12'\n",
-    "edate = '2022-10-12'"
+    "sdate = \"2022-08-12\"\n",
+    "edate = \"2022-10-12\""
    ]
   },
   {
@@ -117,10 +119,587 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Backlog:\n",
-    "1. Which select queries need to be converted to procedure calls\n",
-    "2. Create tables from other tables "
+    "## Query execution per day"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = qqlib.queries_by_execution_status(sdate,edate)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_count = df.groupby(['day']).agg({'n_success': 'sum', 'n_fail': 'sum'}).reset_index()\n",
+    "df_count.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_credits = cqlib.credits_by_day(sdate, edate)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trace1 = go.Bar(\n",
+    "        x = df_count['day'],\n",
+    "        y = df_count['n_success'],\n",
+    "        name=\"Execution success count\",\n",
+    "    )\n",
+    "\n",
+    "trace2 = go.Bar(\n",
+    "        x = df_count['day'],\n",
+    "        y = df_count['n_fail'],\n",
+    "        name=\"Execution fail count\",\n",
+    "    )\n",
+    "\n",
+    "trace3  = go.Scatter(\n",
+    "        mode='lines+markers',\n",
+    "        x = df_credits['date'],\n",
+    "        y = df_credits['credits'],\n",
+    "        name=\"Credits\",\n",
+    "        yaxis='y2',\n",
+    "        line=dict(color='black'),\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "data = [trace1, trace2, trace3]\n",
+    "\n",
+    "layout = go.Layout(\n",
+    "    title_text='Query success, fail, credits per day',\n",
+    "    yaxis=dict(\n",
+    "        title=\"Count number\",\n",
+    "        showgrid=False,\n",
+    "    ),\n",
+    "     yaxis2=dict(\n",
+    "        title=\"Credits\", \n",
+    "        overlaying=\"y\",\n",
+    "        side=\"right\",\n",
+    "        showgrid=False,\n",
+    "    ),\n",
+    "    xaxis=dict(\n",
+    "        title=\"Date (UTC)\"\n",
+    "    ),\n",
+    "    legend=dict(\n",
+    "        yanchor=\"top\",\n",
+    "        y=0.99,\n",
+    "        xanchor=\"left\",\n",
+    "        x=0.99\n",
+    "    ),\n",
+    "    barmode=\"stack\"\n",
+    ")\n",
+    "fig = go.Figure(data=data, layout=layout)\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##TODO Function to filter DF based on multiple columns\n",
+    "df[(df['day']=='2022-08-16 00:00:00-07:00')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[df['day']=='2022-08-17 00:00:00-07:00']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Query execution by user per day"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_by_user = df.groupby(['user_name','day']).agg({'n_success': 'sum', 'n_fail': 'sum'})\n",
+    "df_by_user.reset_index(inplace=True)\n",
+    "user_list = list(df_by_user[\"user_name\"].unique())\n",
+    "# user_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# user = 'ANALYTICS_EXERCISE_USER' #significant failures\n",
+    "# user =  'BAMBOO' #significant failures\n",
+    "# user =  'DBT_DEV'\n",
+    "# user = 'DBT_PROD'\n",
+    "# user = 'FIVETRAN_USER'\n",
+    "# user = 'FIVETRAN_USER_DEV'\n",
+    "# user = 'GREGORYW' #some failures\n",
+    "# user = 'GREGORYW_DEV'\n",
+    "user = 'KIVA_API_SNAPSHOT_PROD' #all failures\n",
+    "# user = 'LOOKER_DEV_ADMIN' #significant failures\n",
+    "# user = 'LOOKER_PROD' #some failures\n",
+    "# user = 'LOOKER_PROD_ADMIN' #some failures\n",
+    "# user = 'LOOKER_RAW_DEV' #significant failures\n",
+    "# user = 'LOOKER_RAW_PROD' #significant failures\n",
+    "# user = 'MAXH_DEV' #some failures\n",
+    "# user = 'ML_SERVICE_DEV'\n",
+    "# user = 'ML_SERVICE_PROD'\n",
+    "# user = 'PATRICKL'\n",
+    "# user = 'PATT' #significant failures\n",
+    "# user = 'ROBS' #significant failures\n",
+    "# user = 'TEST_EXERCISE_AS' #some failures\n",
+    "# user = 'TEST_EXERCISE_CM' #some failures\n",
+    "# user = 'TEST_EXERCISE_JAR' #some failures\n",
+    "# user = 'TEST_EXERCISE_LAZ' #some failures\n",
+    "# user = 'TEST_EXERCISE_RDN' #some failures\n",
+    "# user = 'VERTEX_API_DEV'\n",
+    "# user = 'VERTEX_API_DEV_JENKINS'\n",
+    "# user = 'VERTEX_API_PROD'\n",
+    "# user = 'WORKSHEETS_APP_USER'\n",
+    "df_user = df_by_user[df_by_user[\"user_name\"] == user]\n",
+    "df_user.reset_index(drop=True,inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trace1 = go.Bar(\n",
+    "        x = df_user['day'],\n",
+    "        y = df_user['n_success'],\n",
+    "        name=\"Execution success count\",\n",
+    "    )\n",
+    "\n",
+    "trace2 = go.Bar(\n",
+    "        x = df_user['day'],\n",
+    "        y = df_user['n_fail'],\n",
+    "        name=\"Execution fail count\",\n",
+    "    )\n",
+    "\n",
+    "data = [trace1, trace2]\n",
+    "\n",
+    "layout = go.Layout(\n",
+    "    title_text='Query count',\n",
+    "    yaxis=dict(\n",
+    "        title=\"Count number\",\n",
+    "        showgrid=False,\n",
+    "    ),\n",
+    "     yaxis2=dict(\n",
+    "        title=\"Number of times ran\", \n",
+    "        overlaying=\"y\",\n",
+    "        side=\"right\",\n",
+    "        showgrid=False,\n",
+    "    ),\n",
+    "    xaxis=dict(\n",
+    "        title=\"Date (UTC)\"\n",
+    "    ),\n",
+    "    legend=dict(\n",
+    "        yanchor=\"top\",\n",
+    "        y=0.99,\n",
+    "        xanchor=\"left\",\n",
+    "        x=0.99\n",
+    "    ),\n",
+    "    barmode=\"stack\"\n",
+    ")\n",
+    "fig = go.Figure(data=data, layout=layout)\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Query execution by warehouse per day"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_by_wh = df.groupby(['warehouse_name','day']).agg({'n_success': 'sum', 'n_fail': 'sum'})\n",
+    "df_by_wh.reset_index(inplace=True)\n",
+    "wh_list = list(df_by_wh[\"warehouse_name\"].unique())\n",
+    "# wh_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# wh = 'DAILY_REFRESH_WH'\n",
+    "# wh = 'DEV_WH'\n",
+    "# wh = 'ML_WH'\n",
+    "# wh ='PROD_WH'\n",
+    "wh = 'Unassigned'\n",
+    "df_wh = df_by_wh[df_by_wh[\"warehouse_name\"] == wh]\n",
+    "df_wh.reset_index(drop=True,inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trace1 = go.Bar(\n",
+    "        x = df_wh['day'],\n",
+    "        y = df_wh['n_success'],\n",
+    "        name=\"Execution success count\",\n",
+    "    )\n",
+    "\n",
+    "trace2 = go.Bar(\n",
+    "        x = df_wh['day'],\n",
+    "        y = df_wh['n_fail'],\n",
+    "        name=\"Execution fail count\",\n",
+    "    )\n",
+    "\n",
+    "data = [trace1, trace2]\n",
+    "\n",
+    "layout = go.Layout(\n",
+    "    title_text='Query count',\n",
+    "    yaxis=dict(\n",
+    "        title=\"Count number\",\n",
+    "        showgrid=False,\n",
+    "    ),\n",
+    "     yaxis2=dict(\n",
+    "        title=\"Number of times ran\", \n",
+    "        overlaying=\"y\",\n",
+    "        side=\"right\",\n",
+    "        showgrid=False,\n",
+    "    ),\n",
+    "    xaxis=dict(\n",
+    "        title=\"Date (UTC)\"\n",
+    "    ),\n",
+    "    legend=dict(\n",
+    "        yanchor=\"top\",\n",
+    "        y=0.99,\n",
+    "        xanchor=\"left\",\n",
+    "        x=0.99\n",
+    "    ),\n",
+    "    barmode=\"stack\"\n",
+    ")\n",
+    "fig = go.Figure(data=data, layout=layout)\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Find the queries given the conditions - with options to omit certain constraints\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Get most inefficient query by metric - credits, total time elapsed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# metric = 'total_time_elapsed_sec'\n",
+    "metric = 'credits'\n",
+    "df = qqlib.n_inefficient_queries(sdate,edate,250,metric=metric)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_unique = qqlib.get_unique_queries(df,metric)\n",
+    "df_unique"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1 = df[df['query_hash']=='6ef334ed61427031d52acf53a055ab57']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Average is not there and total credits are different\n",
+    "metric = 'credits'\n",
+    "df = qqlib.n_inefficient_queries(sdate,edate,250,metric=metric)\n",
+    "df = qqlib.get_unique_queries(df,metric)\n",
+    "df.head(20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trace1 = go.Bar(\n",
+    "        x = df['query_hash'],\n",
+    "        y = df['n_success'],\n",
+    "        name=\"Execution success count\",\n",
+    "    )\n",
+    "\n",
+    "trace2 = go.Bar(\n",
+    "        x = df['query_hash'],\n",
+    "        y = df['n_fail'],\n",
+    "        name=\"Execution fail count\",\n",
+    "    )\n",
+    "\n",
+    "trace3  = go.Scatter(\n",
+    "        mode='markers+lines',\n",
+    "        x = df['query_hash'],\n",
+    "        y = df['credits'],\n",
+    "        name=\"Credits\",\n",
+    "        yaxis='y2',\n",
+    "        line=dict(color='black'),\n",
+    "    )\n",
+    "\n",
+    "data = [trace1, trace2, trace3]\n",
+    "\n",
+    "layout = go.Layout(\n",
+    "    title_text='Query count',\n",
+    "    yaxis=dict(\n",
+    "        title=\"Count number\",\n",
+    "        showgrid=False,\n",
+    "    ),\n",
+    "     yaxis2=dict(\n",
+    "        title=\"Number of times ran\", \n",
+    "        overlaying=\"y\",\n",
+    "        side=\"right\",\n",
+    "        showgrid=False,\n",
+    "    ),\n",
+    "    xaxis=dict(\n",
+    "        title=\"Date (UTC)\"\n",
+    "    ),\n",
+    "    legend=dict(\n",
+    "        yanchor=\"top\",\n",
+    "        y=0.99,\n",
+    "        xanchor=\"left\",\n",
+    "        x=0.99\n",
+    "    ),\n",
+    "    barmode=\"stack\"\n",
+    ")\n",
+    "fig = go.Figure(data=data, layout=layout)\n",
+    "fig.update_yaxes(rangemode=\"tozero\")\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.loc[0].query_id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Now plot these grouped queries as success and fail bar charts and show what numbers are different between success and fail"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Queries succeeded / failed by hash in an analysis period\n",
+    "## Individual query inefficient by a metric\n",
+    "## Query hashes inefficient by metric"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
