--- a/notebooks/kiva/wh_analysis.ipynb
+++ b/notebooks/kiva/wh_analysis.ipynb
@@ -179,6 +179,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## Scaling policy for DEV_WH and dither queries to other places when WH query load is low\n",
     "## Analyze which queries are triggering a queue in PROD_WH.\n",
     "## Analyze if there is opportunity to dither queries between ML_WH, DAILY_REFRESH_WH and DEV_WH\n",
     "## Us there a specific user who is triggering a queue in PROD_WH, DEV_WH\n",
