rebase off master

--- a/notebooks/kiva/query_analysis.ipynb
+++ b/notebooks/kiva/query_analysis.ipynb
@@ -209,6 +209,89 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Failures by user by day"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_fail = df[df['execution_status'] == 'FAIL'].reset_index(drop=True)\n",
+    "df_fail_user = df_fail.groupby([\"user_name\",\"day\"]).sum(\"warehouse_name\").reset_index()\n",
+    "df_fail_user.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = px.bar(df_fail_user, x=\"day\", y=\"n_fail\", color=\"user_name\", title=\"Number failed by user\")\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Failures by warehouse by day"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_fail_wh = df_fail.groupby([\"warehouse_name\",\"day\"]).sum(\"user_name\").reset_index()\n",
+    "df_fail_wh.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = px.bar(df_fail_wh, x=\"day\", y=\"n_fail\", color=\"warehouse_name\", title=\"Number failed by warehouse\")\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df=qqlib.get_queries(start_date=\"2022-08-17\",end_date=\"2022-08-18\",wh=\"DEV_WH\",es=\"FAIL\",user=\"BAMBOO\")\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qqlib.query_id_to_details('01a65a8e-0604-a684-0000-08d15b6b133e')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qqlib.query_id_to_details('01a65a90-0604-a837-0000-08d15b6b2302')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
