--- a/notebooks/kiva/query_analysis.ipynb
+++ b/notebooks/kiva/query_analysis.ipynb
@@ -269,8 +269,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df=qqlib.get_queries(start_date=\"2022-08-17\",end_date=\"2022-08-18\",wh=\"DEV_WH\",es=\"FAIL\",user=\"BAMBOO\")\n",
-    "df.head()"
+    "## 17th Aug DEV_WH execution_status fail anomaly\n",
+    "df=qqlib.get_queries(start_date=\"2022-08-17\",end_date=\"2022-08-18\",wh=\"DEV_WH\",es=\"FAIL\", n=1500)\n",
+    "df_unique = qqlib.append_query_hash(df)\n",
+    "df_unique_group = df_unique.groupby(['query_hash','query_text']).agg({'execution_status':'count'}).reset_index()\n",
+    "df_fails = df.groupby(['query_hash','query_text']).agg({'execution_status':'count'}).reset_index().sort_values('execution_status', ascending=False)\n",
+    "df_fails.head()"
    ]
   },
   {
@@ -279,7 +283,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "qqlib.query_id_to_details('01a65a8e-0604-a684-0000-08d15b6b133e')"
+    "## 3rd Oct DEV_WH execution_status fail anomaly\n",
+    "df=qqlib.get_queries(start_date=\"2022-10-03\",end_date=\"2022-10-04\",wh=\"DEV_WH\",es=\"FAIL\", n=1500)\n",
+    "df_unique = qqlib.append_query_hash(df)\n",
+    "df_unique_group = df_unique.groupby(['query_hash','query_text']).agg({'execution_status':'count'})\n",
+    "df_fails = df.groupby(['query_hash','query_text']).agg({'execution_status':'count'}).sort_values('execution_status', ascending=False).reset_index()\n",
+    "df_fails.head()"
    ]
   },
   {
@@ -288,26 +297,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "qqlib.query_id_to_details('01a65a90-0604-a837-0000-08d15b6b2302')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "##TODO Function to filter DF based on multiple columns\n",
-    "df[(df['day']=='2022-08-16 00:00:00-07:00')]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df[df['day']=='2022-08-17 00:00:00-07:00']"
+    "## 11th Oct Unassigned execution_status fail anomaly\n",
+    "df=qqlib.get_queries(start_date=\"2022-10-11\",end_date=\"2022-10-12\",es=\"FAIL\", n=1500)\n",
+    "df_unique = qqlib.append_query_hash(df)\n",
+    "df_unique_group = df_unique.groupby(['query_hash','query_text']).agg({'execution_status':'count'})\n",
+    "df_fails = df.groupby(['query_hash','query_text']).agg({'execution_status':'count'}).sort_values('execution_status', ascending=False).reset_index()\n",
+    "df_fails.head()"
    ]
   },
   {
@@ -315,6 +310,15 @@
    "metadata": {},
    "source": [
     "## Query execution by user per day"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = qqlib.queries_by_execution_status(sdate,edate)"
    ]
   },
   {
@@ -416,10 +420,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## all failures for a user between start and end date\n",
+    "df=qqlib.get_queries(start_date=sdate,end_date=edate,user=user,es=\"FAIL\", n=1500)\n",
+    "df_unique = qqlib.append_query_hash(df)\n",
+    "df_unique_group = df_unique.groupby(['query_hash','query_text']).agg({'execution_status':'count'})\n",
+    "df_fails = df.groupby(['query_hash','query_text']).agg({'execution_status':'count'}).sort_values('execution_status', ascending=False).reset_index()\n",
+    "df_fails.head()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Query execution by warehouse per day"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = qqlib.queries_by_execution_status(sdate,edate)"
    ]
   },
   {
@@ -502,14 +529,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Find the queries given the conditions - with options to omit certain constraints\n"
+    "## Find the queries given the conditions - with options to omit certain constraints\n",
+    "df = qqlib.get_queries(start_date='2022-10-11',end_date='2022-10-12',es='FAIL', n=1500)\n",
+    "df = df.fillna('Unassigned')\n",
+    "# df.head()\n",
+    "df = df[df['warehouse_name']=='Unassigned']\n",
+    "df_unique = qqlib.append_query_hash(df)\n",
+    "df_unique_group = df_unique.groupby(['query_hash','query_text']).agg({'execution_status':'count'})\n",
+    "df_fails = df.groupby(['query_hash','query_text']).agg({'execution_status':'count'}).sort_values('execution_status', ascending=False).reset_index()\n",
+    "df_fails.head(10)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Get most inefficient query by metric - credits, total time elapsed"
+    "## Get most inefficient query by metric - credits, total time elapsed etc."
    ]
   },
   {
@@ -518,8 +553,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# metric = 'bytes_scanned'\n",
+    "# metric = 'percentage_scanned_from_cache'\n",
+    "# metric = 'bytes_spilled_to_local_storage'\n",
+    "# metric = 'bytes_spilled_to_remote_storage' -- division by 0\n",
+    "# metric = 'percentage_partitions_scanned' -- division by 0\n",
+    "# metric = 'partitions_total'\n",
+    "# metric = 'compilation_time_sec' -- division by 0\n",
+    "# metric = 'execution_time_sec'\n",
+    "# metric = 'queued_provisioning_time_sec' -- division by 0\n",
+    "# metric = 'queued_repair_time_sec' -- division by 0\n",
+    "# metric = 'queued_overload_time_sec' -- division by 0\n",
+    "# metric = 'list_external_files_time_sec' -- division by 0\n",
     "# metric = 'total_time_elapsed_sec'\n",
-    "metric = 'credits'\n",
+    "# metric = 'credits'\n",
     "df = qqlib.n_inefficient_queries(sdate,edate,250,metric=metric)\n",
     "df.head()"
    ]
