--- a/notebooks/kiva/cost_analysis.ipynb
+++ b/notebooks/kiva/cost_analysis.ipynb
@@ -726,6 +726,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## Break partner tool out by version number - get version number by user to show security risk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "df_titles=sorted(df[\"warehouse_name\"].unique())\n",
     "df_warehouse = [d for _, d in df.groupby(['warehouse_name'])]"
    ]
