--- a/notebooks/kiva/wh_analysis.ipynb
+++ b/notebooks/kiva/wh_analysis.ipynb
@@ -151,7 +151,7 @@
     "        )\n",
     "        trace3 = go.Scatter(\n",
     "          x=df_credits['hourly_start_time'] ,y=df_credits['credits'],\n",
-    "            name='Credits consumed'\n",
+    "            name='Credits consumed', mode='lines+markers',\n",
     "        )\n",
     "\n",
     "        f = make_subplots(specs=[[{\"secondary_y\": True}]])\n",
